--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -395,6 +395,8 @@
     padding: 80px 0 120px;
     .blog_items {
         position: relative;
+        margin: 1.5em 1.5em 0 0;
+box-shadow: 0px 8px 20px;
         &:hover {
             .blog_content {
                 background: #22195e;
